# eye-tracking-sdg

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
configs/: default.yaml
demo/: README.md  generate_los_data.py  index.html  index.template.html  los_data.json
docs/: _report_stats.json  index.html  report.md
scripts/: build_html.py  make_report_figures.py
src/synthetic_eye_tracking/: __init__.py  aoi.py  cli.py  config.py  events.py  participants.py  raw_gaze.py  schema.py  stimuli.py
src/synthetic_eye_tracking/detection/: __init__.py  experiment.py  features.py  lund2013.py  report.py  synthetic.py
src/synthetic_eye_tracking/evaluation/: __init__.py  metrics.py  plots.py  report.py
src/synthetic_eye_tracking/generators/: __init__.py  base.py  model_based.py  rule_based.py
src/synthetic_eye_tracking/io/: __init__.py  loaders.py  writers.py
src/synthetic_eye_tracking/models/: __init__.py  hmm.py  markov.py  parametric.py
tests/: test_detection_features.py  test_evaluation.py  test_lund2013.py  test_model_based.py  test_rule_based.py  test_schema.py
