[project]
name = "synthetic-eye-tracking"
version = "0.1.0"
description = "Synthetic eye-tracking data generator (rule-based and model-based) with a shared evaluation framework."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
hmm = ["hmmlearn>=0.3"]
fast = ["polars>=0.20", "duckdb>=0.10"]

[project.scripts]
synthetic-eye-tracking = "synthetic_eye_tracking.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synthetic_eye_tracking"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
